# naaz

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
arch/: Arch.cpp  Arch.hpp  arm32LE.cpp  arm32LE.hpp  x86_64.cpp  x86_64.hpp
executor/: BFSExplorationTechnique.cpp  BFSExplorationTechnique.hpp  CovExplorationTechnique.cpp  CovExplorationTechnique.hpp  DFSExplorationTechnique.cpp  DFSExplorationTechnique.hpp  Executor.hpp  ExecutorManager.cpp  ExecutorManager.hpp  ExplorationTechnique.cpp  ExplorationTechnique.hpp  PCodeExecutor.cpp  PCodeExecutor.hpp  RandDFSExplorationTechnique.cpp  RandDFSExplorationTechnique.hpp
expr/: BVConst.cpp  BVConst.hpp  Expr.cpp  Expr.hpp  ExprBuilder.cpp  ExprBuilder.hpp  FPConst.cpp  FPConst.hpp  util.cpp  util.hpp
lifter/: PCodeLifter.cpp  PCodeLifter.hpp
loader/: AddressSpace.cpp  AddressSpace.hpp  BFDLoader.cpp  BFDLoader.hpp  Loader.hpp
models/: Linker.cpp  Linker.hpp  Model.hpp  SyscallModel.hpp
models/libc/: alloc.cpp  directory.hpp  exit.cpp  libc_start_main.cpp  posix_file_handling.cpp  ptrace.cpp  random.cpp  read.cpp  stdio.cpp  string.cpp  string_utils.cpp  string_utils.hpp
models/linux_syscalls/: directory.hpp  open.cpp  read.cpp
solver/: ConstraintManager.cpp  ConstraintManager.hpp  Solver.hpp  Z3Solver.cpp  Z3Solver.hpp
state/: File.cpp  File.hpp  FileSystem.cpp  FileSystem.hpp  Linux64Platform.cpp  Linux64Platform.hpp  MapMemory.cpp  MapMemory.hpp  Memory.hpp  Platform.hpp  PluginManager.cpp  PluginManager.hpp  Solver.cpp  Solver.hpp  State.cpp  State.hpp  UnknownPlatform.cpp  UnknownPlatform.hpp
tests/: CMakeLists.txt  bvconst_tests.cpp  common_main.cpp  executor_tests.cpp  expr_tests.cpp  solver_tests.cpp  state_tests.cpp
tests/programs/: Makefile  allocs.c  argv_sym.c  complex_check.c  file_open.c  float_branch.c  float_branch_2.c  implicit_flow.c  jmp_table.c  rand_api_1.c  stdio_1.c  stdio_2.c  strings_api_1.c  strings_api_2.c  strings_api_3.c  sym_call.c  sym_write.c  syscalls_linux.c  with_config_1.c  with_config_1.json  xor_input.c
tools/: CMakeLists.txt  bininfo.cpp  executor_demo.cpp  gen_path_demo.cpp  lift_demo.cpp  loader_demo.cpp  naaz_debugger.cpp  naaz_finder.cpp  naaz_path_generator.cpp
util/: config.cpp  config.hpp  ioutil.cpp  ioutil.hpp  parseutil.cpp  parseutil.hpp  str_utils.hpp  strutil.cpp  strutil.hpp
